--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^9.8.7",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+        "postcss": "^8.3.1",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
+    },
+    "dependencies": {}
 }
